k8s/api.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: cloudacademy/api:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
