k8s/api.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
spec:
 rules:
 - host: api.35.161.240.53.nip.io
   http:
     paths:
     - path: /
       backend:
         serviceName: apiservice
         servicePort: 8080
